--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,6 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
     //import extern jar
+    implementation files('libs/dijkstra.jar')
     implementation files('libs/test-app.jar')
 }
